Fixed horizontal overflow on contact page

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -31,6 +31,7 @@ body {
   flex-direction: column;
   height: 100%;
   min-height: 100vh;
+  max-width: 100%;
 }
 
 
@@ -249,13 +250,6 @@ footer {
 
 .contact-container {
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(507px, 1fr));
-  column-gap: 50px;
-  row-gap: 50px;
-  justify-items: center;
-  align-items: center;
-  padding: 30px;
-  width: 100%;
 }
 
 .contact-info {
@@ -284,7 +278,7 @@ footer {
 .contact-svg {
   width: 100%;
   height: 100%;
-  max-width: 600px;
+  max-width: 700px;
 }
 
 @import "responsive";
